oxiplate-derive/tests/crates/unreachable/tests/broken/unicode/fifth-char-invalid.stderr
error: Internal Oxiplate error: Failed to parse unicode escape. Expected `[0-9a-f]` or `}`
 --> tests/broken/unicode/fifth-char-invalid.rs:5:26
  |
5 | #[oxiplate_inline("/u{198g")]
  |                          ^
  |
  = help: Please open an issue: https://github.com/0b10011/oxiplate/issues/new?title=Failed+to+parse+unicode+escape.+Expected+%60%5B0-9a-f%5D%60+or+%60%7D%60&labels=internal+error&body=Error%3A%0A%0A%60%60%60text%0APASTE_FULL_ERROR_HERE%0A%60%60%60%0A%0ATemplate%3A%0A%0A%60%60%60%0APASTE_TEMPLATE_HERE%0A%60%60%60

error: proc-macro derive panicked
 --> tests/broken/unicode/fifth-char-invalid.rs:4:10
  |
4 | #[derive(Oxiplate)]
  |          ^^^^^^^^
  |
  = help: message: internal error: entered unreachable code: Internal Oxiplate error. See previous error for more information.

error[E0277]: `Data` doesn't implement `std::fmt::Display`
 --> tests/broken/unicode/fifth-char-invalid.rs:9:18
  |
9 |     print!("{}", Data);
  |             --   ^^^^ `Data` cannot be formatted with the default formatter
  |             |
  |             required by this formatting parameter
  |
help: the trait `std::fmt::Display` is not implemented for `Data`
 --> tests/broken/unicode/fifth-char-invalid.rs:6:1
  |
6 | struct Data;
  | ^^^^^^^^^^^
  = note: in format strings you may be able to use `{:?}` (or {:#?} for pretty-print) instead
